# MagicCalender

./: README.md  magic_calender.py  pyproject.toml  requirements.txt
core/: __init__.py  appointment.py  box.py  grid.py  point.py
core/test/: example.json  test_appointment.py  test_box.py  test_grid.py  test_numpy_replace.py  test_point.py
magic_calender/: __init__.py  __main__.py  config.py  conftest.py  magic_calender.py
test/: conftest.py  example.json  test_appointment.py  test_box.py  test_grid.py  test_magic_calender.py  test_magic_day.py  test_magic_month.py  test_numpy_replace.py  test_point.py
tests/: conftest.py  example.json  test_box.py  test_magic_day.py
